@@ -5,7 +5,15 @@ import com.sprint5team.monew.domain.interest.dto.CursorPageResponseInterestDto;
 import com.sprint5team.monew.domain.interest.dto.InterestDto;
 import com.sprint5team.monew.domain.interest.entity.Interest;
 import com.sprint5team.monew.domain.interest.repository.InterestRepository;
+import com.sprint5team.monew.domain.interest.repository.InterestRepositoryImpl;
 import com.sprint5team.monew.domain.interest.service.InterestService;
+import com.sprint5team.monew.domain.interest.service.InterestServiceImpl;
+import com.sprint5team.monew.domain.keyword.entity.Keyword;
+import com.sprint5team.monew.domain.keyword.repository.KeywordRepository;
+import com.sprint5team.monew.domain.user_interest.entity.UserInterest;
+import com.sprint5team.monew.domain.user_interest.mapper.InterestMapper;
+import com.sprint5team.monew.domain.user_interest.repository.UserInterestRepository;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -14,16 +22,15 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.test.util.ReflectionTestUtils;
 
+import java.time.Duration;
 import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
 
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatReflectiveOperationException;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.*;
@@ -37,327 +44,343 @@ import static org.mockito.BDDMockito.*;
 @ExtendWith(MockitoExtension.class)
 @DisplayName("Interest service unit 테스트")
 public class InterestServiceTest {
-    @Mock
-    private InterestRepository interestRepository; // Mock the repository layer
 
     @InjectMocks
-    private InterestService interestService;
+    private InterestServiceImpl interestService;
+
+    @Mock
+    private InterestRepository interestRepository;
+
+    @Mock
+    private KeywordRepository keywordRepository;
+
+    @Mock
+    private UserInterestRepository userInterestRepository;
 
 
+    @Mock
+    private InterestMapper interestMapper;
 
-    /**
-     *0 required
-     * orderBy(name,subscriberCount), direction, limit, Monew-Request-User-Id
-     *
-     *0 not required
-     * keyword, cursor, after
-     */
+    Interest interestA, interestB, interestC;
+
+    @BeforeEach
+    public void setup() {
+        Instant createdAt = Instant.now();
+
+        interestA = Interest.builder()
+            .name("다큐멘터리")
+            .subscriberCount(50L)
+            .createdAt(createdAt.minus(Duration.ofMinutes(10)))
+            .build();
+        ReflectionTestUtils.setField(interestA, "id", UUID.randomUUID());
+
+        interestB = Interest.builder()
+            .name("게임")
+            .subscriberCount(200L)
+            .createdAt(createdAt.minus(Duration.ofMinutes(20)))
+            .build();
+        ReflectionTestUtils.setField(interestB, "id", UUID.randomUUID());
+
+        interestC = Interest.builder()
+            .name("스포츠")
+            .subscriberCount(100L)
+            .createdAt(createdAt.minus(Duration.ofMinutes(5)))
+            .build();
+        ReflectionTestUtils.setField(interestC, "id", UUID.randomUUID());
+    }
+
 
     @Test
     void 입력된_keyword를_포함한_관심사를_조회한다() throws Exception {
         // given
+
         CursorPageRequest validRequest = CursorPageRequest.builder()
-            .keyword("축구")
+            .keyword("게임")
             .orderBy("name")
             .direction("asc")
             .limit(10)
             .userId(UUID.randomUUID())
             .build();
 
+        UserInterest userInterest = UserInterest.builder()
+            .interest(interestB)
+            .build();
+        ReflectionTestUtils.setField(userInterest, "id", validRequest.getUserId());
+
+        Keyword validKeyword = Keyword.builder().build();
+
         given(interestRepository.findAllInterestByRequest(validRequest))
-            .willReturn(Arrays.asList());
+            .willReturn(List.of(interestB));
+
+        given(userInterestRepository.findByUserId(validRequest.getUserId()))
+            .willReturn(Set.of(userInterest));
+
+        given(interestRepository.countTotalElements(validRequest))
+            .willReturn(1L);
+
+        given(keywordRepository.findAllByInterest(any(Interest.class)))
+            .willReturn(Set.of(validKeyword));
+
+        given(interestMapper.toDto(any(),any(),eq(true)))
+            .willReturn(mock(InterestDto.class));
 
         // when
-        interestService.generateCursorPage(validRequest);
+        CursorPageResponseInterestDto result = interestService.generateCursorPage(validRequest);
+
+        assertThat(result.totalElements()).isEqualTo(1);
+        assertThat(result.content()).hasSize(1);
+        assertThat(result.content().get(0).getClass()).isEqualTo(InterestDto.class);
+        assertThat(result.hasNext()).isFalse();
 
         verify(interestRepository).findAllInterestByRequest(validRequest);
+        then(interestRepository).should(times(1)).findAllInterestByRequest(validRequest);
+        then(interestRepository).should(times(1)).countTotalElements(validRequest);
+        then(interestMapper).should(times(1)).toDto(any(),any(),eq(true));
     }
 
     @Test
-    void 이름으로_정렬한다() throws Exception {
+    void 조건이_없을경우_모든_관심사를_조회한다() throws Exception {
         // given
-        String keyword = "스포츠";
-        String orderBy = "name";
-        String direction = "asc";
-        String cursor = null;
-        Instant after = null;
-        Integer limit = 10;
-        UUID userId = UUID.randomUUID();
+        CursorPageRequest request = CursorPageRequest.builder()
+            .orderBy("name")
+            .direction("asc")
+            .limit(10)
+            .userId(UUID.randomUUID())
+            .build();
 
-        CursorPageRequest request = new CursorPageRequest(keyword, orderBy, direction, cursor, after, limit, userId);
-        LocalDateTime now = LocalDateTime.ofInstant(Instant.now(), ZoneId.systemDefault());
+        given(interestRepository.findAllInterestByRequest(request))
+            .willReturn(List.of(interestA, interestB, interestC));
 
-        Interest interestA = Interest.builder()
-            .name("게임").subscriberCount(100L).build();
-        ReflectionTestUtils.setField(interestA, "createdAt", now.minusMinutes(10));
-        Interest interestB = Interest.builder()
-            .name("다큐멘터리").subscriberCount(50L).build();
-        ReflectionTestUtils.setField(interestB, "createdAt", now.minusMinutes(20));
-        Interest interestC = Interest.builder()
-            .name("스포츠").subscriberCount(200L).build();
-        ReflectionTestUtils.setField(interestC, "createdAt", now.minusMinutes(5));
-        List<Interest> interests = Arrays.asList(interestA, interestB, interestC);
+        given(interestRepository.countTotalElements(request))
+            .willReturn(3L);
 
-        given(interestRepository.findAllInterestByRequest(any(CursorPageRequest.class)))
-            .willReturn(interests);
+        given(keywordRepository.findAllByInterest(any(Interest.class)))
+            .willReturn(Set.of(Keyword.builder().name("키워드").build()));
 
+        given(userInterestRepository.findByUserId(request.getUserId()))
+            .willReturn(Set.of(
+                UserInterest.builder().interest(interestB).build()
+            ));
 
-        InterestDto expectedDtoA = InterestDto.builder()
-            .id(UUID.nameUUIDFromBytes(interestA.getId().toString().getBytes()))
-            .name(interestA.getName())
-            .subscriberCount(interestA.getSubscriberCount())
-            .keywords(Collections.emptyList())
-            .subscribedByMe(false).build();
-        InterestDto expectedDtoB = InterestDto.builder()
-            .id(UUID.nameUUIDFromBytes(interestB.getId().toString().getBytes()))
-            .name(interestB.getName())
-            .subscriberCount(interestB.getSubscriberCount())
-            .keywords(Collections.emptyList())
-            .subscribedByMe(false).build();
-        InterestDto expectedDtoC = InterestDto.builder()
-            .id(UUID.nameUUIDFromBytes(interestC.getId().toString().getBytes()))
-            .name(interestC.getName())
-            .subscriberCount(interestC.getSubscriberCount())
-            .keywords(Collections.emptyList())
-            .subscribedByMe(false).build();
-        List<InterestDto> expectedInterestDtos = Arrays.asList(expectedDtoA, expectedDtoB, expectedDtoC);
+        given(interestMapper.toDto(eq(interestA), any(), anyBoolean())).willReturn(mock(InterestDto.class));
+        given(interestMapper.toDto(eq(interestB), any(), anyBoolean())).willReturn(mock(InterestDto.class));
+        given(interestMapper.toDto(eq(interestC), any(), anyBoolean())).willReturn(mock(InterestDto.class));
 
         // when
         CursorPageResponseInterestDto result = interestService.generateCursorPage(request);
 
         // then
-        verify(interestRepository).findAllInterestByRequest(request);
-
-        assertThat(result.content())
-            .isNotNull()
-            .hasSize(interests.size())
-            .containsExactlyElementsOf(expectedInterestDtos);
-
-        assertThat(result.nextCursor()).isEqualTo(interestC.getId().toString());
+        assertThat(result.totalElements()).isEqualTo(3);
+        assertThat(result.content()).hasSize(3);
         assertThat(result.hasNext()).isFalse();
-    }
 
-    @Test
-    void 구독자수로_정렬한다() throws Exception {
-        // given
-        String keyword = "스포츠";
-        String orderBy = "subscriberCount";
-        String direction = "asc";
-        String cursor = null;
-        Instant after = null;
-        Integer limit = 10;
-        UUID userId = UUID.randomUUID();
-
-        CursorPageRequest request = new CursorPageRequest(keyword, orderBy, direction, cursor, after, limit, userId);
-        LocalDateTime now = LocalDateTime.ofInstant(Instant.now(), ZoneId.systemDefault());
-
-        Interest interestA = Interest.builder()
-            .name("게임").subscriberCount(100L).build();
-        ReflectionTestUtils.setField(interestA, "createdAt", now.minusMinutes(10));
-        Interest interestB = Interest.builder()
-            .name("다큐멘터리").subscriberCount(50L).build();
-        ReflectionTestUtils.setField(interestB, "createdAt", now.minusMinutes(20));
-        Interest interestC = Interest.builder()
-            .name("스포츠").subscriberCount(200L).build();
-        ReflectionTestUtils.setField(interestC, "createdAt", now.minusMinutes(5));
-        List<Interest> interests = Arrays.asList(interestA, interestB, interestC);
-
-        given(interestRepository.findAllInterestByRequest(any(CursorPageRequest.class)))
-            .willReturn(interests);
-
-
-        InterestDto expectedDtoA = InterestDto.builder()
-            .id(UUID.nameUUIDFromBytes(interestA.getId().toString().getBytes()))
-            .name(interestA.getName())
-            .subscriberCount(interestA.getSubscriberCount())
-            .keywords(Collections.emptyList())
-            .subscribedByMe(false).build();
-        InterestDto expectedDtoB = InterestDto.builder()
-            .id(UUID.nameUUIDFromBytes(interestB.getId().toString().getBytes()))
-            .name(interestB.getName())
-            .subscriberCount(interestB.getSubscriberCount())
-            .keywords(Collections.emptyList())
-            .subscribedByMe(false).build();
-        InterestDto expectedDtoC = InterestDto.builder()
-            .id(UUID.nameUUIDFromBytes(interestC.getId().toString().getBytes()))
-            .name(interestC.getName())
-            .subscriberCount(interestC.getSubscriberCount())
-            .keywords(Collections.emptyList())
-            .subscribedByMe(false).build();
-        List<InterestDto> expectedInterestDtos = Arrays.asList(expectedDtoB, expectedDtoA, expectedDtoC);
-
-        // when
-        CursorPageResponseInterestDto result = interestService.generateCursorPage(request);
-
-        // then
         verify(interestRepository).findAllInterestByRequest(request);
+        verify(interestRepository).countTotalElements(request);
+        verify(interestMapper, times(3)).toDto(any(), any(), anyBoolean());
 
-        assertThat(result.content())
-            .isNotNull()
-            .hasSize(interests.size())
-            .containsExactlyElementsOf(expectedInterestDtos);
-
-        assertThat(result.nextCursor()).isEqualTo(interestC.getId().toString());
-        assertThat(result.hasNext()).isFalse();
-    }
-
-    @Test
-    void 내림차순_정렬한다() throws Exception {
-        // given
-        String keyword = "스포츠";
-        String orderBy = "subscriberCount";
-        String direction = "desc";
-        String cursor = null;
-        Instant after = null;
-        Integer limit = 10;
-        UUID userId = UUID.randomUUID();
-
-        CursorPageRequest request = new CursorPageRequest(keyword, orderBy, direction, cursor, after, limit, userId);
-        LocalDateTime now = LocalDateTime.ofInstant(Instant.now(), ZoneId.systemDefault());
-
-        Interest interestA = Interest.builder()
-            .name("게임").subscriberCount(100L).build();
-        ReflectionTestUtils.setField(interestA, "createdAt", now.minusMinutes(10));
-        Interest interestB = Interest.builder()
-            .name("다큐멘터리").subscriberCount(50L).build();
-        ReflectionTestUtils.setField(interestB, "createdAt", now.minusMinutes(20));
-        Interest interestC = Interest.builder()
-            .name("스포츠").subscriberCount(200L).build();
-        ReflectionTestUtils.setField(interestC, "createdAt", now.minusMinutes(5));
-        List<Interest> interests = Arrays.asList(interestA, interestB, interestC);
-
-        given(interestRepository.findAllInterestByRequest(any(CursorPageRequest.class)))
-            .willReturn(interests);
-
-
-        InterestDto expectedDtoA = InterestDto.builder()
-            .id(UUID.nameUUIDFromBytes(interestA.getId().toString().getBytes()))
-            .name(interestA.getName())
-            .subscriberCount(interestA.getSubscriberCount())
-            .keywords(Collections.emptyList())
-            .subscribedByMe(false).build();
-        InterestDto expectedDtoB = InterestDto.builder()
-            .id(UUID.nameUUIDFromBytes(interestB.getId().toString().getBytes()))
-            .name(interestB.getName())
-            .subscriberCount(interestB.getSubscriberCount())
-            .keywords(Collections.emptyList())
-            .subscribedByMe(false).build();
-        InterestDto expectedDtoC = InterestDto.builder()
-            .id(UUID.nameUUIDFromBytes(interestC.getId().toString().getBytes()))
-            .name(interestC.getName())
-            .subscriberCount(interestC.getSubscriberCount())
-            .keywords(Collections.emptyList())
-            .subscribedByMe(false).build();
-        List<InterestDto> expectedInterestDtos = Arrays.asList(expectedDtoC, expectedDtoA, expectedDtoB);
-
-        // when
-        CursorPageResponseInterestDto result = interestService.generateCursorPage(request);
-
-        // then
-        verify(interestRepository).findAllInterestByRequest(request);
-
-        assertThat(result.content())
-            .isNotNull()
-            .hasSize(interests.size())
-            .containsExactlyElementsOf(expectedInterestDtos);
-
-        assertThat(result.nextCursor()).isEqualTo(interestC.getId().toString());
-        assertThat(result.hasNext()).isFalse();
     }
 
     @Test
     void 커서값을_기준으로_조회한다() throws Exception {
         // given
-        String keyword = "스포츠";
-        String orderBy = "name";
-        String direction = "desc";
-        String cursor = "게임";
-        Instant after = null;
-        Integer limit = 10;
         UUID userId = UUID.randomUUID();
 
-        CursorPageRequest request = new CursorPageRequest(keyword, orderBy, direction, cursor, after, limit, userId);
-        LocalDateTime now = LocalDateTime.ofInstant(Instant.now(), ZoneId.systemDefault());
+        CursorPageRequest request = CursorPageRequest.builder()
+            .orderBy("name")
+            .direction("desc")
+            .cursor("게임")
+            .limit(10)
+            .userId(userId)
+            .build();
+
+        InterestDto dto = InterestDto.builder()
+            .id(interestA.getId())
+            .name(interestA.getName())
+            .subscriberCount(interestA.getSubscriberCount())
+            .keywords(List.of("키워드"))
+            .subscribedByMe(false)
+            .build();
+
+        given(interestRepository.findAllInterestByRequest(any())).willReturn(List.of(interestA));
+        given(interestRepository.countTotalElements(any())).willReturn(1L);
+        given(keywordRepository.findAllByInterest(any())).willReturn(Set.of());
+        given(userInterestRepository.findByUserId(any())).willReturn(Set.of());
+        given(interestMapper.toDto(any(), any(), eq(false))).willReturn(dto);
+
+        CursorPageResponseInterestDto result = interestService.generateCursorPage(request);
+
+        assertThat(result.content()).containsExactly(dto);
+        assertThat(result.totalElements()).isEqualTo(1L);
+    }
 
 
-        Interest interestB = Interest.builder()
-            .name("다큐멘터리").subscriberCount(50L).build();
-        ReflectionTestUtils.setField(interestB, "createdAt", now.minusMinutes(20));
-        Interest interestC = Interest.builder()
-            .name("스포츠").subscriberCount(200L).build();
-        ReflectionTestUtils.setField(interestC, "createdAt", now.minusMinutes(5));
-        List<Interest> interests = Arrays.asList(interestB, interestC);
+    @Test
+    void 구독여부를_판단할_수_있다() throws Exception {
+        // given
+        UUID userId = UUID.randomUUID();
 
-        given(interestRepository.findAllInterestByRequest(any(CursorPageRequest.class)))
-            .willReturn(interests);
+        CursorPageRequest request = CursorPageRequest.builder()
+            .orderBy("name")
+            .direction("asc")
+            .limit(10)
+            .userId(userId)
+            .build();
 
+        UserInterest userInterest = UserInterest.builder()
+            .interest(interestA)
+            .build();
+        ReflectionTestUtils.setField(userInterest, "id", userId);
 
-        InterestDto expectedDtoB = InterestDto.builder()
-            .id(UUID.nameUUIDFromBytes(interestB.getId().toString().getBytes()))
-            .name(interestB.getName())
-            .subscriberCount(interestB.getSubscriberCount())
-            .keywords(Collections.emptyList())
-            .subscribedByMe(false).build();
-        InterestDto expectedDtoC = InterestDto.builder()
-            .id(UUID.nameUUIDFromBytes(interestC.getId().toString().getBytes()))
-            .name(interestC.getName())
-            .subscriberCount(interestC.getSubscriberCount())
-            .keywords(Collections.emptyList())
-            .subscribedByMe(false).build();
-        List<InterestDto> expectedInterestDtos = Arrays.asList(expectedDtoB, expectedDtoC);
+        InterestDto dto = InterestDto.builder()
+            .id(interestA.getId())
+            .name(interestA.getName())
+            .subscriberCount(interestA.getSubscriberCount())
+            .keywords(List.of("키워드"))
+            .subscribedByMe(true)
+            .build();
+
+        given(interestRepository.findAllInterestByRequest(any()))
+            .willReturn(List.of(interestA));
+        given(interestRepository.countTotalElements(any()))
+            .willReturn(1L);
+        given(keywordRepository.findAllByInterest(any()))
+            .willReturn(Set.of(Keyword.builder().name("키워드").build()));
+        given(userInterestRepository.findByUserId(userId))
+            .willReturn(Set.of(userInterest));
+        given(interestMapper.toDto(eq(interestA), any(), eq(true)))
+            .willReturn(dto);
 
         // when
         CursorPageResponseInterestDto result = interestService.generateCursorPage(request);
 
         // then
-        verify(interestRepository).findAllInterestByRequest(request);
-
-        assertThat(result.content())
-            .isNotNull()
-            .hasSize(interests.size())
-            .containsExactlyElementsOf(expectedInterestDtos);
-        assertThat(result.content().get(0).name())
-            .isEqualTo("expectedDtoB");
-
-        assertThat(result.nextCursor()).isEqualTo(interestC.getId().toString());
-        assertThat(result.hasNext()).isFalse();
-
+        assertThat(result.content()).hasSize(1);
+        assertThat(result.content().get(0).subscribedByMe()).isTrue();
     }
 
 
     @Test
-    void 유저_기반_구독여부를_판단한다() throws Exception {
+    void 관심사_수가_원하는_관심사수보다_적을경우_nextCursor_nextAfter은_null을_반환한다() throws Exception {
         // given
+        UUID userId = UUID.randomUUID();
+
+        CursorPageRequest request = CursorPageRequest.builder()
+            .orderBy("name")
+            .direction("desc")
+            .limit(10)
+            .userId(userId)
+            .build();
+
+        InterestDto dto = InterestDto.builder()
+            .id(interestA.getId())
+            .name(interestA.getName())
+            .subscriberCount(interestA.getSubscriberCount())
+            .keywords(List.of("키워드"))
+            .subscribedByMe(false)
+            .build();
+
+        given(interestRepository.findAllInterestByRequest(any())).willReturn(List.of(interestC,interestA,interestB));
+        given(interestRepository.countTotalElements(any())).willReturn(1L);
+        given(keywordRepository.findAllByInterest(any())).willReturn(Set.of());
+        given(userInterestRepository.findByUserId(any())).willReturn(Set.of());
+        given(interestMapper.toDto(any(), any(), eq(false))).willReturn(dto);
 
         // when
+        CursorPageResponseInterestDto result = interestService.generateCursorPage(request);
 
         // then
-
+        assertThat(result.nextCursor()).isNull();
+        assertThat(result.hasNext()).isFalse();
     }
 
-        @Test
+    @Test
+    void 요청한_관심사_이후_관심사가_없을경우_nextCursor_nextAfter은_null을_반환한다() throws Exception {
+        // given
+        UUID userId = UUID.randomUUID();
+
+        CursorPageRequest request = CursorPageRequest.builder()
+            .orderBy("name")
+            .direction("asc")
+            .cursor("게임")
+            .limit(2)
+            .userId(userId)
+            .build();
+
+        InterestDto dto = InterestDto.builder()
+            .id(interestA.getId())
+            .name(interestA.getName())
+            .subscriberCount(interestA.getSubscriberCount())
+            .keywords(List.of("키워드"))
+            .subscribedByMe(false)
+            .build();
+        InterestDto dto2 = InterestDto.builder()
+            .id(interestC.getId())
+            .name(interestC.getName())
+            .subscriberCount(interestC.getSubscriberCount())
+            .keywords(List.of("키워드"))
+            .subscribedByMe(false)
+            .build();
+
+        given(interestRepository.findAllInterestByRequest(any())).willReturn(List.of(interestA,interestC));
+        given(interestRepository.countTotalElements(any())).willReturn(2L);
+        given(keywordRepository.findAllByInterest(any())).willReturn(Set.of());
+        given(userInterestRepository.findByUserId(any())).willReturn(Set.of());
+        given(interestMapper.toDto(eq(interestA), any(), eq(false))).willReturn(dto);
+        given(interestMapper.toDto(eq(interestC), any(), eq(false))).willReturn(dto2);
+
+        // when
+        CursorPageResponseInterestDto result = interestService.generateCursorPage(request);
+
+        // then
+        assertThat(result.nextCursor()).isNull();
+        assertThat(result.hasNext()).isFalse();
+        assertThat(result.content().get(0).name()).isEqualTo(interestA.getName());
+        assertThat(result.content().get(1).name()).isEqualTo(interestC.getName());
+    }
+
+    @Test
     void 커서_페이지_크기로_조회한다() throws Exception {
-//        // given
-//        String keyword = null;
-//        String orderBy = "subscriberCount";
-//        String direction = "asc";
-//        String cursor = null;
-//        Instant after = null;
-//        Integer limit = 2;
-//        UUID userId = UUID.randomUUID();
-//
-//        List<Interest> sortedInterest = List.of(interestA, interestC);
-//
-//        CursorPageRequest request = new CursorPageRequest(keyword, orderBy, direction, cursor, after, limit, userId);
-//        // when
-//        List<Interest> result = interestRepository.findAllInterestByRequest(request);
-//
-//        // then
-//        assertThat(result)
-//            .isNotNull()
-//            .hasSize(sortedInterest.size())
-//            .containsExactlyElementsOf(sortedInterest);
+    // given
+        UUID userId = UUID.randomUUID();
+
+        CursorPageRequest request = CursorPageRequest.builder()
+            .orderBy("name")
+            .direction("asc")
+            .cursor("게임")
+            .limit(2)
+            .userId(userId)
+            .build();
+
+        InterestDto dto = InterestDto.builder()
+            .id(interestA.getId())
+            .name(interestA.getName())
+            .subscriberCount(interestA.getSubscriberCount())
+            .keywords(List.of("키워드"))
+            .subscribedByMe(false)
+            .build();
+        InterestDto dto2 = InterestDto.builder()
+            .id(interestC.getId())
+            .name(interestC.getName())
+            .subscriberCount(interestC.getSubscriberCount())
+            .keywords(List.of("키워드"))
+            .subscribedByMe(false)
+            .build();
+
+        given(interestRepository.findAllInterestByRequest(any())).willReturn(List.of(interestA,interestC));
+        given(interestRepository.countTotalElements(any())).willReturn(2L);
+        given(keywordRepository.findAllByInterest(any())).willReturn(Set.of());
+        given(userInterestRepository.findByUserId(any())).willReturn(Set.of());
+        given(interestMapper.toDto(eq(interestA), any(), eq(false))).willReturn(dto);
+        given(interestMapper.toDto(eq(interestC), any(), eq(false))).willReturn(dto2);
+
+        // when
+        CursorPageResponseInterestDto result = interestService.generateCursorPage(request);
+
+        // then
+        assertThat(result.content().size()).isEqualTo(2);
     }
+
+
 
 
 }
